--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "hello-world",
-  "version": "0.0.0",
+  "name": "expressjs-boilerplate",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "Valentin Stamate",
+    "email": "stamatevalentin125@gmail.com",
+    "url": "valentinstamate.com"
+  },
   "scripts": {
     "start": "npx nodemon src/server.ts",
+    "build": "npx tsc",
+    "start:prod": "NODE_ENV=production node ./dist/server.js",
     "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
-    "helmet": "^6.0.0",
+    "helmet": "^6.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.3",
-    "@types/jest": "^29.2.0",
+    "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.3",
-    "jest": "^29.2.2",
-    "nodemon": "^2.0.15",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   }
 }
